--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
   "author": "Jeeva Madhaiyan",
   "license": "ISC",
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.6",
     "@vonage/server-sdk": "^3.14.0",
+    "aws-sdk": "^2.1622.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "exif-parser": "^0.1.12",
     "express": "^4.19.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.4",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "twilio": "^5.0.4",
